# inginious-cloze-plugin

./: .gitignore  README.md  pyproject.toml
examples/: matching_spec.json
scripts/: cloze_variants.json  convert_moodle_cache_xml.py  convert_moodle_cloze_xml.py  generate_matching_variants.py
src/inginious_cloze_plugin/: __init__.py  agent_cloze.py  cloze_agent.py  cloze_core.py  cloze_env.py  cloze_problem_backend.py  cloze_problem_frontend.py  task_editor.py
src/inginious_cloze_plugin/static/: cloze_editor.js  cloze_task_status.js
src/inginious_cloze_plugin/templates/: cloze_editor_tab.html  cloze_input.html
tests/: test_parse.py
