[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inginious-cloze-plugin"
version = "0.1.0"
description = "INGInious plugin that adds a Moodle Cloze-style problem type with a Task Editor tab"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="Your Name", email="you@example.com"}]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.package-data]
"inginious_cloze_plugin" = ["templates/*.html", "static/*.js"]
